--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Slobodan Milosavljević – Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+<body>
+  <h1>Slobodan Milosavljević</h1>
+  <p>Senior Business Analyst / Product Owner</p>
 
+  <h2>Case Studies</h2>
+  <ul>
+    <li>PunchOut eProcurement – ADI Global</li>
+    <li>E-commerce & Platform Integrations</li>
+    <li>Digital Transformation & ERP</li>
+  </ul>
+
+  <p>
+    <a href="https://www.linkedin.com/">LinkedIn</a>
+  </p>
+</body>
+</html>
