--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="btn btn-lg btn-outline-custom" href="#contact">Get In Touch</a>
                 </div>
                 <div class="social-links">
-                    <a href="https://linkedin.com/in/YOUR-LINKEDIN-PROFILE" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin"></i></a>
+                    <a href="www.linkedin.com/in/slobodan-milosavljevic" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin"></i></a>
                     <a href="/cdn-cgi/l/email-protection#cba8a4a5bfaaa8bf8baeb3aaa6bba7aee5a8a4a6" class="social-link"><i class="fas fa-envelope"></i></a>
                     <a href="https://github.com/slobodan1313" target="_blank" rel="noopener" class="social-link"><i class="fab fa-github"></i></a>
                 </div>
@@ -492,7 +492,7 @@
                             <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/></svg>
                         </a>
                         <span class="text-muted">|</span>
-                        <span class="text-muted small">www.royalbalm.rs</span>
+                        <span class="text-muted small">royalbalm.rs</span>
                     </div>
                 </div>
             </div>
@@ -506,9 +506,9 @@
         <div class="row justify-content-center text-center">
             <div class="col-12 col-lg-8 text-white">
                 <h3 class="fw-bold display-font mb-3" style="font-size:2rem;">Ready to Transform Your Project?</h3>
-                <p class="fs-5 mb-4" style="color:#bfdbfe;">Let's discuss how BABOK v3 methodology and evidence-based analysis can deliver results.</p>
+                <p class="fs-5 mb-4" style="color:#bfdbfe;">Let's discuss how evidence-based analysis can deliver results.</p>
                 <div class="d-flex gap-3 justify-content-center flex-wrap mb-5">
-                    <a href="mailto:your@email.com" class="btn btn-lg px-4 py-3 fw-semibold" style="background:#f97316;color:#fff;border:none;">Get In Touch</a>
+                    <a href="mailto:slobodan.milosavljevic@gmail.com" class="btn btn-lg px-4 py-3 fw-semibold" style="background:#f97316;color:#fff;border:none;">Get In Touch</a>
                     <a href="#case-studies" class="btn btn-lg px-4 py-3 fw-semibold" style="background:rgba(255,255,255,.15);color:#fff;border:none;">View Case Studies</a>
                 </div>
                 <div class="pt-4 border-top" style="border-color:rgba(255,255,255,.2) !important;">
