--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                     </div>
 
                     <div class="d-flex align-items-center gap-3">
-                        <a href="https://www.royalbalm.rs" target="_blank" rel="noopener" class="fw-semibold text-primary text-decoration-none d-flex align-items-center gap-1">
+                        <a href="https://royalbalm.rs" target="_blank" rel="noopener" class="fw-semibold text-primary text-decoration-none d-flex align-items-center gap-1">
                             Visit Website
                             <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/></svg>
                         </a>
