--- a/index.html
+++ b/index.html
@@ -3,7 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slobodan Milosavljević - BA/PO Portfolio</title>
+    <title>Slobodan Milosavljević | Senior Business Analyst &amp; Product Owner Portfolio</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Senior Business Analyst and Product Owner with 20+ years in IT. Specializing in B2B integrations, ERP implementations, multi-vendor coordination and user-centered digital ecosystems. BABOK v3 certified.">
+    <meta name="keywords" content="Business Analyst, Product Owner, BABOK, B2B Integration, ERP, PunchOut, BigCommerce, requirements engineering, stakeholder management, digital transformation, Serbia">
+    <meta name="author" content="Slobodan Milosavljević">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://slobodan1313.github.io/">
+
+    <!-- Open Graph (LinkedIn / Facebook) -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://slobodan1313.github.io/">
+    <meta property="og:title" content="Slobodan Milosavljević | Senior Business Analyst &amp; Product Owner">
+    <meta property="og:description" content="20+ years in IT consulting. B2B integrations, ERP implementations, user-centered digital ecosystems. BABOK v3 certified.">
+    <meta property="og:image" content="https://slobodan1313.github.io/assets/images/main/slobodan-half-profile.png">
+    <meta property="og:site_name" content="Slobodan Milosavljević Portfolio">
+    <meta property="og:locale" content="en_US">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Slobodan Milosavljević | Senior Business Analyst &amp; Product Owner">
+    <meta name="twitter:description" content="20+ years in IT consulting. B2B integrations, ERP implementations, user-centered digital ecosystems. BABOK v3 certified.">
+    <meta name="twitter:image" content="https://slobodan1313.github.io/assets/images/main/slobodan-half-profile.png">
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Slobodan Milosavljević",
+        "jobTitle": "Senior Business Analyst & Product Owner",
+        "description": "Business consultant with 20+ years in IT. BABOK v3 certified.",
+        "url": "https://slobodan1313.github.io/",
+        "image": "https://slobodan1313.github.io/assets/images/main/slobodan-half-profile.png",
+        "sameAs": [
+            "www.linkedin.com/in/slobodan-milosavljevic",
+            "https://github.com/slobodan1313"
+        ],
+        "knowsAbout": ["Business Analysis","Product Ownership","BABOK v3","B2B Integration","ERP Implementation","Requirements Engineering","Stakeholder Management","Digital Transformation"],
+        "hasCredential": {
+            "@type": "EducationalOccupationalCredential",
+            "name": "BABOK v3 Certification",
+            "credentialCategory": "Professional Certification"
+        }
+    }
+    <\/script>
+
+    <!-- Performance -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/custom.css">
@@ -513,10 +563,10 @@
                 </div>
                 <div class="pt-4 border-top" style="border-color:rgba(255,255,255,.2) !important;">
                     <div class="d-flex justify-content-center gap-3">
-                        <a href="mailto:your@email.com" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
+                        <a href="mailto:slobodan.milosavljevic@gmail.com" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
                             <svg width="22" height="22" fill="none" stroke="#fff" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
                         </a>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
+                        <a href="www.linkedin.com/in/slobodan-milosavljevic" target="_blank" rel="noopener" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
                             <svg width="22" height="22" fill="#fff" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                         </a>
                         <a href="tel:+1234567890" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
