--- a/index.html
+++ b/index.html
@@ -563,10 +563,10 @@
                 </div>
                 <div class="pt-4 border-top" style="border-color:rgba(255,255,255,.2) !important;">
                     <div class="d-flex justify-content-center gap-3">
-                        <a href="mailto:your@email.com" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
+                        <a href="mailto:slobodan.milosavljevic@gmail.com" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
                             <svg width="22" height="22" fill="none" stroke="#fff" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
                         </a>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
+                        <a href="www.linkedin.com/in/slobodan-milosavljevic" target="_blank" rel="noopener" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
                             <svg width="22" height="22" fill="#fff" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                         </a>
                         <a href="tel:+1234567890" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
