--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/slobodan-milosavljevic" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin"></i></a>
-                    <a href="/cdn-cgi/l/email-protection#cba8a4a5bfaaa8bf8baeb3aaa6bba7aee5a8a4a6" class="social-link"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:slobodan.milosavljevic@gmail.com" class="social-link"><i class="fas fa-envelope"></i></a>
                     <a href="https://github.com/slobodan1313" target="_blank" rel="noopener" class="social-link"><i class="fab fa-github"></i></a>
                 </div>
             </div>
@@ -558,12 +558,12 @@
                 <h3 class="fw-bold display-font mb-3" style="font-size:2rem;">Ready to Transform Your Project?</h3>
                 <p class="fs-5 mb-4" style="color:#bfdbfe;">Let's discuss how evidence-based analysis can deliver results.</p>
                 <div class="d-flex gap-3 justify-content-center flex-wrap mb-5">
-                    <a href="/cdn-cgi/l/email-protection#681b04070a070c090646050104071b091e04020d1e010b280f05090104460b0705" class="btn btn-lg px-4 py-3 fw-semibold" style="background:#f97316;color:#fff;border:none;">Get In Touch</a>
+                    <a href="mailto:slobodan.milosavljevic@gmail.com" class="btn btn-lg px-4 py-3 fw-semibold" style="background:#f97316;color:#fff;border:none;">Get In Touch</a>
                     <a href="#case-studies" class="btn btn-lg px-4 py-3 fw-semibold" style="background:rgba(255,255,255,.15);color:#fff;border:none;">View Case Studies</a>
                 </div>
                 <div class="pt-4 border-top" style="border-color:rgba(255,255,255,.2) !important;">
                     <div class="d-flex justify-content-center gap-3">
-                        <a href="/cdn-cgi/l/email-protection#057c6a7077456068646c692b666a68" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
+                        <a href="mailto:slobodan.milosavljevic@gmail.com" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
                             <svg width="22" height="22" fill="none" stroke="#fff" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
                         </a>
                         <a href="https://www.linkedin.com/in/slobodan-milosavljevic" target="_blank" rel="noopener" class="rounded-circle d-flex align-items-center justify-content-center" style="width:48px;height:48px;background:#2563eb;">
@@ -586,7 +586,7 @@
         <p class="text-secondary small mb-0">© 2026 Slobodan Milosavljević | Senior Business Analyst &amp; Product Owner</p>
     </div>
 </footer>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     window.addEventListener('scroll', function() {
